# TASK-111

./: metadata.json
repo/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  run_tests.sh
repo/docs/: api-matrix.md  permission-matrix.md  reviewer-checklist.md  state-machines.md
repo/migrations/0001_init/: down.sql  up.sql
repo/migrations/0002_auth_rbac/: down.sql  up.sql
repo/migrations/0003_members_wallet_points/: down.sql  up.sql
repo/migrations/0004_bookings_inventory/: down.sql  up.sql
repo/migrations/0005_notifications_groups/: down.sql  up.sql
repo/migrations/0006_assets_versions/: down.sql  up.sql
repo/migrations/0007_evaluations/: down.sql  up.sql
repo/migrations/0008_payments_reconciliation/: down.sql  up.sql
repo/migrations/0009_audit_jobs/: down.sql  up.sql
repo/migrations/0010_indexes_constraints/: down.sql  up.sql
repo/migrations/0011_notifications_reference_id/: down.sql  up.sql
repo/migrations/0012_adjustment_approval/: down.sql  up.sql
repo/migrations/0013_evaluation_scope/: down.sql  up.sql
repo/migrations/0014_asset_governance/: down.sql  up.sql
repo/migrations/0015_member_preferences_timezone/: down.sql  up.sql
repo/migrations/0016_notification_channel_in_app_only/: down.sql  up.sql
repo/migrations/0017_notification_channels_multi/: up.sql
repo/migrations/0018_audit_tamper_evidence/: down.sql  up.sql
repo/migrations/0019_cutoff_by_zone_pickup/: down.sql  up.sql
repo/migrations/0020_restrict_channel_in_app_only/: down.sql  up.sql
repo/migrations/0021_restore_channels_with_fallback/: down.sql  up.sql
repo/migrations/0026_reviewer_role/: down.sql  (+1 more)
repo/src/: app.rs  lib.rs  main.rs  schema.rs
repo/tests/: api_bookings.rs  api_health_users.rs  api_inventory.rs  api_members.rs  api_misc_domains.rs  asset_versioning.rs  auth_flow.rs  booking_lifecycle.rs  high_risk.rs  idempotency.rs  notification_dnd.rs  reconciliation_integration.rs
(+101 files in other folders)
