[package]
name = "venue_ops"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "venue_ops"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"
actix-web-httpauth = "0.8"
actix-multipart = "0.6"

# Database
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json", "numeric"] }
diesel_migrations = "2.1"
diesel-derive-enum = { version = "2", features = ["postgres"] }
r2d2 = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str", "db-diesel2-postgres"] }

# Crypto
argon2 = "0.5"
jsonwebtoken = "9"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Error handling
thiserror = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Config
dotenvy = "0.15"
config = "0.13"

# CSV parsing (reconciliation)
csv = "1"

# gzip writer for the backup job — direct stream from pg_dump stdout to disk
# without invoking a shell pipeline.
flate2 = "1"

# Async trait
async-trait = "0.1"

# Bytes (multipart uploads)
bytes = "1"
futures-util = "0.3"

[lib]
name = "venue_booking"
path = "src/lib.rs"

[dev-dependencies]
actix-web = { version = "4", features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
diesel_migrations = "2.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
